fixed bottom white space

--- a/stylesheets/about-me.css
+++ b/stylesheets/about-me.css
@@ -50,6 +50,7 @@ html, body{
   position: relative;
   background-image: url("../imgs/wood.jpg");
   margin-top: 10px;
+  padding-bottom: 6px;
 }
 
 #container {
@@ -89,7 +90,7 @@ a {
 
 footer {
   text-align: center;
-  background-image: url("../imgs/wood.jpg");
+  /*background-image: url("../imgs/wood.jpg");*/
   width: 100%;
   height: 30px;
   position: relative;
